# testcapi

./: CMakeLists.txt  Dockerfile  README.md  build.sh  clean.sh  common.h  main.cpp  md5sum.txt  modelInput.cpp  modelInput.h  run.sh
data/: input
mkl/lib/: libmkldnn.so.0
param/: ___batch_norm_0__.w0  ___batch_norm_0__.w0.protobuf  ___batch_norm_0__.w1  ___batch_norm_0__.w1.protobuf  ___batch_norm_0__.w2  ___batch_norm_0__.w2.protobuf  ___batch_norm_0__.wbias  ___batch_norm_0__.wbias.protobuf  ___embedding_0__.w0  ___embedding_0__.w0.protobuf  ___embedding_10__.w0  ___embedding_10__.w0.protobuf  ___embedding_11__.w0  ___embedding_11__.w0.protobuf  ___embedding_12__.w0  ___embedding_12__.w0.protobuf  ___embedding_13__.w0  ___embedding_13__.w0.protobuf  ___embedding_14__.w0  ___embedding_14__.w0.protobuf  ___embedding_15__.w0  ___embedding_15__.w0.protobuf  ___embedding_16__.w0  ___embedding_16__.w0.protobuf  ___embedding_17__.w0  ___embedding_17__.w0.protobuf  ___embedding_1__.w0  ___embedding_1__.w0.protobuf  ___embedding_2__.w0  ___embedding_2__.w0.protobuf  ___embedding_3__.w0  ___embedding_3__.w0.protobuf  ___embedding_4__.w0  ___embedding_4__.w0.protobuf  ___embedding_5__.w0  ___embedding_5__.w0.protobuf  ___embedding_6__.w0  ___embedding_6__.w0.protobuf  ___embedding_7__.w0  ___embedding_7__.w0.protobuf  (+107 more)
